# find.ai

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml  test_env.py
backend/app/: __init__.py  main.py
backend/app/agent/: executor.py  graph.py  planner.py
backend/app/api/: utils.py
backend/app/api/routes/: __init__.py  agent.py  auth.py  drive.py  health.py  history.py  share.py  users.py
backend/app/auth/: session.py
backend/app/core/: config.py  errors.py  logging.py  rate_limit.py  request_context.py  utils.py
backend/app/db/: init.py  models.py  session.py
backend/app/middleware/: __init__.py  http.py
backend/app/schemas/: types.py
backend/app/services/: llm.py
backend/app/services/drive/: auth.py  client.py  ingest.py
backend/app/services/vector/: store.py
backend/app/tools/: __init__.py  base.py  drive_search.py  registry.py  vector_search.py  web_scrape.py  web_search.py
backend/archon_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_agent_graph_error.py  test_llm_json.py  test_plan_recovery.py  test_planner_prompts.py  test_rate_limit.py  test_utils.py
docs/: AGENT-LOOP-DESIGN.md  DEPLOYMENT.md  agent-loop.md  api.md  architecture.md  tools.md
frontend/: .dockerignore  .env.example  .prettierignore  Dockerfile  next.config.ts  package-lock.json  package.json  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: agent-input.tsx  agent-result.tsx  agent-state-badge.tsx  (+6 more)
(+9 files in other folders)
